Proyecto angular shopping

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "bde13a9b-42ae-4731-bccd-e98946ec7b7c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
